# novel-gen

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  restart_backend.bat
backend/: .env.example  .gitignore  check_id.py  list_routes.py  pyproject.toml  test_final.py  test_fix.py  test_full.py  test_routes.py  test_user_scenario.py  test_wb.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: append_outline.py  (+10 more)
backend/scripts/: backfill_embeddings.py  clear_outline_data.py  verify_outline_rolling.py  verify_real_stream_pipeline.py
backend/tests/: conftest.py  golden_test_cases.py  prompt_regression_test.py  test_auth_hardening.py  test_bible_chapter_events.py  test_bible_store_unit_e.py  test_chapter_coordinator.py  test_chapter_quality_state.py  test_chapter_word_budget.py  test_chapter_writer.py  test_character_agent.py  test_context_budget_priority.py  test_context_snapshot_store.py  test_coordinator_metrics.py  test_cost_reservations.py  test_data_safety_unit_c.py  test_database_integration.py  test_dho.py  test_domain_schema.py  test_foreshadowing_unit_b.py  test_full_pipeline_e2e.py  test_manual_review_quality.py  test_memory_records.py  test_memory_reindex.py  test_outline_api.py  test_outline_rolling.py  test_outline_safety.py  test_prose_compliance.py  test_quality_failures.py  test_request_transaction_routes.py  test_reviewer_failures.py  test_security_unit_a.py  test_semantic_recall_unit_b.py  test_streaming_structured_retry.py  test_task_and_llm.py  test_task_error_safety.py  test_task_recovery.py  test_template_environment.py  test_workbench_api.py  test_write_chapter_api.py  (+1 more)
(+226 files in other folders)
